--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <svg viewBox="0 0 1000 1000" width="100%" height="100%">
         <link xmlns="http://www.w3.org/1999/xhtml" rel="stylesheet" href="bezier_project.css" type="text/css"/>
-        <path d="M100,100 C900,0 100,900 900,900" fill="transparent" stroke="black"/>
-        <path d="M900,900 C900,500 400,400 600,50" fill="transparent" stroke="red"/>
+        <path d="M100,100 C900,0 100,900 900,900 C900,500 400,400 600,50 L600 700" fill="transparent"/>
+        <!--<path d="M900,900 C900,500 400,400 600,50" fill="transparent"/>-->
         <circle id="movePoint" cx="100" cy="100" r="12" />
     </svg>
 </body>
